# research-assistant

./: .gitignore  AGENTS.md  Cargo.toml  commitmsg.txt  const_arg.md  master_spec.md  spec_arg.md
.codex/prompts/: document-refinement.md  git.md  merge.md  pr.md  resolve-conflicts.md
.specify/memory/: constitution.md
docs/: CHANGELOG.md  intent-router.md  writing-assistant.md
docs/perf/: intent_router.md  profile_show.md
specs/001-ingestion-figures/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-onboarding-paper-acquisition/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-reports-visuals/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ingestion-figures/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-reports-visuals/: data-model.md  plan.md  spec.md  tasks.md
specs/003-category-editing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-reports-visuals/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-ai-profile-memory/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-chat-intent-routing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-writing-assistant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-learning-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-paper-discovery/: data-model.md  plan.md  research.md  (+3 more)
src/: lib.rs
tests/: README.md
(+171 files in other folders)
