[package]
name = "researchbase"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
uuid = { version = "1.6", features = ["serde", "v4"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.9"
